fix: Correct compilation errors from previous commit
This commit addresses compilation failures that arose after introducing
the systemErrors field to FileValidationResult and modifying related
method signatures.

Fixes include:
- Updating FileValidationResult constructor calls in FileValidator.java
  to include an empty list for systemErrors.
- Ensuring the schema argument passed to FileValidationResult constructors
  in GbfsJsonValidator.java is consistently a String (using .toString()
  on Schema objects).
- Correcting the arguments for the FileValidator.validate call in
  GbfsJsonValidator.java by removing an extraneous originalContent
  argument that did not match the method signature.